# eprints

./: .gitignore  .hgignore  AUTHORS  BUGLIST  CHANGELOG  CHANGELOG.summary  CONTRIBUTORS.md  MANIFEST  Makefile.am  NEWS  README  README.POD  README.TXT  README.pod  ROADMAP  TODO  class.todo  configure.ac  configure.in  cpan_modules.pl  eprints.spec  eprints.spec.in  foo  index.html  install.pl.in  params.json  requiredmodules.txt  todo.mike
archivecfg/: ArchiveConfig.pm  ArchiveMetadataFieldsConfig.pm  ArchiveOAIConfig.pm  ArchiveRenderConfig.pm  ArchiveTextIndexingConfig.pm  ArchiveValidateConfig.pm  citations-en.xml  config.pm  metadata-types.xml  metadata.xml  ruler.xml  subjects  template-en.xml  template-fr.xml
bundled/Apache/: AuthDBI.pm  DBI.pm
bundled/Citation/: Parser.pm
bundled/DBI/: DBD.pm  FAQ.pm  Format.pm  ProxyServer.pm  Shell.pm  W32ODBC.pm
bundled/URI/: Escape.pm
bundled/XML/: DOM.pm
cfg/: conf-lemurprints.xml  languages.xml  metadata.eprint-fields  metadata.eprint-types  subjects  template.author-intro  template.change-email  template.fail-reply  template.fail-user  template.reader-intro  template.user-intro
cfg/cfg.d/: core.pl  executables.pl  invocations.pl  platform.pl  settings.pl  xml_gdome.pl  xml_libxml.pl
cfg/intl/: dummy  english
cgi/: advsearch  cog_abs  cog_archives  cog_search  cog_view_eprint  confirm  counter  epm_icon  export  export_redirect  exportresource  exportsubject  exportview  google_site  handle_404  json  latest  latest_tool  latex2png  logout  lookup  lookup_demo  oai  oai-0.2  oai2  oai_accesslogs  oai_stateless  opensearch  opensearchdescription  openurl  paracite  partial  process_request  rdf  register  remind  repositoryinfo  request_doc  reset_password  respond_to_doc_request  (+13 more)
cgi/ajax/: phrase
cgi/author/: .htaccess  home  record  review  submit
cgi/reader/: .htaccess  subscribe  upgrade
cgi/soap/: soap  wsdl  xsd
cgi/staff/: add_user  buffer  create_subject  edit_submission  edit_user  eprint_search  remove_eprint  status  user_search  view_submission  view_user
cgi/toolbox/: toolbox
cgi/users/: .htaccess  change_email  export  home  import  issn  login  oai_accesslogs  record  respond_doc  review  search  status  submit  subscribe
debian/: changelog.in  control  files  postinst  postinst.in  postrm  postrm.in  preinst  preinst.in  prerm.in  rules.in
html/: .cvsignore  index.html
html/staff/: .htaccess  index.html
intl/: english
lib/: Archive.pm  Auth.pm  Citation.pm  Config.pm  ConfigLoader.pm  Constants.pm  DOM.pm  DataObj.pm  DataSet.pm  Database.pm  Deletion.pm  Document.pm  EPrint.pm  HTMLRender.pm  ImportXML.pm  Language.pm  Latex.pm  Log.pm  Mailer.pm  MetaField.pm  MetaInfo.pm  Name.pm  OpenArchives.pm  Paracite.pm  Probity.pm  RequestWrapper.pm  SearchExpression.pm  SearchField.pm  SearchForm.pm  Session.pm  Site.pm  Subject.pm  SubjectList.pm  SubmissionForm.pm  Subscription.pm  SystemSettings.pm  User.pm  UserForm.pm  UserPage.pm  Utils.pm  (+5 more)
lib/Archives/: General.pm  lemurprints.pm
lib/Site/: General.pm  lemurprints.pm
lib/cfg.d/: 00_version.pl  auth_credentials_basic.pl  core_datasets.pl  doc_rewrite.pl  epm.pl  eprint_duplicates.pl  eprint_search_staff.pl  media_info.pl  mime_types.pl  rdf.pl  rdf_triples_bibo.pl  rdf_triples_eprints.pl  rdf_triples_formats.pl  rdf_triples_general.pl  rdf_triples_repository.pl  rdf_triples_sameas.pl  rdf_triples_skos.pl  rdf_uri_event.pl  rdf_uri_event_location.pl  rdf_uri_org.pl  rdf_uri_person.pl  rdf_uri_publication.pl  repositories.pl  search_xapian.pl  settings.pl  template_core.pl  template_edit_phrases.pl  template_legacy.pl  template_links.pl  xml_gdome.pl  xml_libxml.pl
lib/defaultcfg/: issues.xml  subjects
lib/static/: FlowPlayerClassic.swf  digirep.xsl  oai2.xsl  robots.txt
lib/storage/: default.xml
lib/syscfg.d/: README  core.pl  executables.pl  invocations.pl  platform.pl
lib/templates/: README_FIRST.TXT  default.tx  default.xml  mainonlycss.xml  secure.xml
licenses/: caa_entity.txt  caa_individual.txt  copyright.pod  gpl_license.pod  lgpl_license.pod  license.pl
licenses/contributors/: MrkGrgsn.txt  QUTlib.txt  __example.txt  denics.txt  jesusbagpuss.txt  phluid61.txt
openarchives/Common/: time.pl  utilities.pl  xmit.pl
perl_lib/: EPrints.pm  GScholar.pm  JSON.pm  README  URI.pm  robots.pm
phrases/: archive-en-3  archive-en-current  archive-fr-1  archive-fr-2  du.xml  english  entities-fr.dtd  french  make_latest.pl  system-en-1  system-en-3  system-en-current  system-fr-1  system-fr-2
pod/: generic.pod
sf2tests_bin/: search_xapian.pl  test_xapian.pl
site_lib/: CogOld.pm  SiteInfo.pm  SiteRoutines.pm  Validate.pm
static/: author.html  copyright.html  eprints.css  error401.html  faq.html  index.html  information.html  register.html  sfc-info.html  team.html
system-phrases/: en.xml
tests/: 01_normalise_sort.pl  01_use.pl  02_repository.pl  02_session.pl  03_dataset_n_fields.pl  03_set_value.pl  04_acl.pl  05_bug_fixes.pl  10_xml.pl  10_xml_dom.pl  10_xml_gdome.pl  10_xml_libxml.pl  11_epscript.pl  20_database_utf8.pl  21_database_fields.pl  23_cache.pl  25_mysql.pl  30_list.pl  30_search.pl  31_simple_search.pl  32_triples.pl  40_views.pl  50_mem_usage.pl  51_plugin_mem_usage.pl  52_mem_cycle.pl  55_phrases.pl  60_id_value.pl  61_subjects.pl  62_missing_fields.pl  65_epm.pl  67_crypt.pl  70_xml_import.pl  80_screenprocessor.pl  81_workflow.pl  82_eprint_view.pl  82_screen.pl  83_static.pl  84_sword.pl  90_api_eprints.pl  90_plugins.pl  (+19 more)
tools/: API_modules.txt  atom_multipart.pl  bibtex.yp  cgi_import_unfinished  csv_fields_summary.pl  doc2txt  dom_compare.pl  dump_access  entity_convert  epm  filter_access  generate_workflows  google_scholar  icons.svg.perl  isi_citations  isi_citations.pl  isi_sword.pl  load_fields  map_config.pl  mem_usage.pl  phrases_map  pirus_pingbackd  quickconv  rename_subject_id  run_import  schedule  setpath  sigusr2.pl  static_site.pl  test_pod  txt2refs  ui_changes  update_phrase_file  update_pronom_puids  update_wiki_page  upgrade  xml_parse.pl
tools/soap/: soap  (+2 more)
(+1085 files in other folders)
